--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Rafał Krókowski",
   "license": "ISC",
   "dependencies": {
-    "johnny-five": "^0.14.3"
+    "firmata": "^0.19.1",
+    "johnny-five": "^0.14.3",
+    "serialport": "^6.2.0"
   }
 }
